# bughawk

./: .bughawk.yml.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
bughawk/: __init__.py  cli.py
bughawk/analyzer/: __init__.py  code_locator.py  context_builder.py  pattern_matcher.py  patterns.json
bughawk/context/: __init__.py  base.py  codebase_resolver.py  resolver.py  stacktrace_resolver.py
bughawk/core/: __init__.py  config.py  models.py  orchestrator.py
bughawk/fixer/: __init__.py  fix_generator.py  llm_client.py  llm_registry.py  validator.py
bughawk/git/: __init__.py  pr_creator.py  repo_manager.py
bughawk/monitors/: __init__.py  base.py  bugsnag_monitor.py  datadog_monitor.py  registry.py  rollbar_monitor.py  sentry_monitor.py
bughawk/notifications/: __init__.py  notifier.py
bughawk/sentry/: __init__.py  client.py
bughawk/utils/: __init__.py  logger.py
docs/: api-reference.md  architecture.md  llm-prompts.md  patterns.md
tests/: __init__.py  conftest.py  test_code_locator.py  test_config.py  test_context_builder.py  test_fix_generator.py  test_integration.py  test_llm_client.py  test_monitors.py  test_orchestrator.py  test_pattern_matcher.py  test_pr_creator.py  test_repo_manager.py  test_sentry_client.py  test_validator.py
